{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "7b53379e-bc23-4b67-9ee2-103a319d7990",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "5eada93d-4e10-489e-bf67-064762444f58",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e40ac02f-0019-49c3-95e4-b79866f2317b",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "92cd7eee-ff89-4c08-b5ce-fbd01d5b63ae",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "955df178-3650-419b-8e3b-33aa9ea71a37",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7e5dc1ce-f9da-477b-b878-dc72801beb32",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "06a2daa6-fdfd-41d2-bb09-4acb41d49785",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fdf3a540-4769-43c7-a2aa-c00edcb5f9aa",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "e6c7207b-97f8-4f71-aac4-31b58044938d",
            "actions": [
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "ae3b9362-3e0e-442c-8aeb-7ec4f2a94eef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "c11253b6-d266-42e3-8b11-ca7767c8cee2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "e7c3dce3-295f-49be-8111-d43958402ecc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interacting",
                    "type": "Button",
                    "id": "3541a965-6ecc-404a-9328-8a49cb778989",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "edcbf4fd-cfb4-4a8f-b1a4-af89ed1abbdc",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2324e818-6f06-4b38-900c-a4ef81005529",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e07a6c5-6741-4ab4-a1fa-1adb4aa79e5e",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1238a773-6728-409e-b53d-5b7bbefd9f74",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interacting",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}